--- a/style.css
+++ b/style.css
@@ -15,23 +15,27 @@ body{
 
 .flex-container {
     display: flex;
+    background-color: #fff;
+    flex-wrap: wrap;
+    /* wrap-reverse, no-wrap */
 }
 
 .box {
     height: 100px;
-    width: 320px;
+    width: 200px;
+    flex-grow: 1;
 }
 
 .one {
     background-color: red;
-    flex-shrink: 1;
+    
 }
 .two {
     background-color: blue;
-    flex-shrink: 2;
+    
 }
 .three {
     background-color: green;
-    flex-shrink: 3;
+    
 }
 
