--- a/style.css
+++ b/style.css
@@ -22,20 +22,19 @@ body{
 
 .box {
     height: 100px;
-    width: 200px;
-    flex-grow: 1;
+    min-width: 500px;
 }
 
 .one {
     background-color: red;
-    
+    flex-basis: 100px;
 }
 .two {
     background-color: blue;
-    
+    flex-basis: 200px;
 }
 .three {
     background-color: green;
-    
+    flex-basis: 300px;
 }
 
