--- a/style.css
+++ b/style.css
@@ -19,12 +19,13 @@ body{
     flex-wrap: wrap;
     /* wrap-reverse, no-wrap */
     flex-flow: column;
-    justify-content: center;
-    height: 800px;
+    /* justify-content: center; */
+    align-items: center;
+    height: 600px;
 }
 
 .box {
-    height: 100px;
+    width: 100px;
     flex: 0 0 100px;
 }
 
